--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                         <!-- <span class="gear rodar">S</span> -->
                         <img src="img/logo1.png" class="gear" alt="Imagen de una rueda con símbolos de etiqueta HTML">
                         <a href="https://linktr.ee/nahuel.lopez" target="_blank" id="marcaPersonal">
-                            <p class="m-0">Nahuel ထ</p>
-                            <p class="m-0">NaLo Dev</p>
+                            <p class="m-0">Nahuel</p>
+                            <p class="m-0">Lopez ⚡</p>
                         </a>
                         <!-- <span class="justBeNice desplazamiento">#</span> -->
                     </div>
@@ -123,16 +123,26 @@
                 <div class="mb-3">
                     <h3 class="subtitulo mb-1">Data Engineer en NTT Data<h3>
                     <p class="subtitulo fs-4 lead mt-0 mb-2">2023 - actualmente</p>
-                    <p class="resumen lead">Modelado de Datos con Spark.
-                        Desarrollo de modelos de de Machine Learning. Refactorización de modelos a Spark. 
-                        Resolución de problemas de ingeniería, análisis y
-                        ciencia de datos aplicando Machine Learning.</p>
+                    <p class="resumen lead">Consumo de APIs y conexiones a distintos contenedores de almacenamiento, para desarrollo de procesos ETL/ELT con Python, Spark y Apache NiFi.</p>
+                    <p class="resumen lead">Uso de Hive para creación de tablas y consultas, combinado con Apache Iceberg.</p>
+                    <p class="resumen lead">Modelado de Datos con Apache Spark.</p>
+                    <p class="resumen lead">Refactorización de soluciones en Python a Spark.</p>
+                    <p class="resumen lead">Desarrollos en notebooks de Microsoft Synapse Analytics y consultas SQL.</p>
+                    <p class="resumen lead">Trabajo con metodología AGILE.</p>
+                    <p class="resumen lead">Trabajo colaborativo con Git y GitHub.</p>
+                    <p class="resumen lead">Desarrollo de proyectos de Ciencia de Datos y elaboración de modelos de Machine Learning para UBA (User Behavior Analytics).</p>
                 </div>
                 <!-- Tutor en Coderhouse-->
                 <div class="mb-3">
                     <h3 class="subtitulo mb-0">Tutor de JavaScript y Backend<h3>
                     <p class="subtitulo fs-4 lead mt-0 mb-2">2022-2024</p>
                     <p class="resumen lead">Tutor en Coderhouse de JavaScript y backend con Node.js, a cargo de un grupo de estudiantes como facilitador del aprendizaje, corrigiendo desafíos y entregas, dando apoyo continuo y trabajando en sus dificultades, para mejorar sus experiencias con el aprendizaje.<p>
+                </div>
+                <!-- Desarrollador web Freelance -->
+                <div class="mb-3">
+                    <h3 class="subtitulo mb-1">Desarrollador web Freelance<h3>
+                    <p class="subtitulo fs-4 lead mt-0 mb-2">2021-2022</p>
+                    <p class="resumen lead">Desarrollo de sitios web. Desarrollo frontend con HTML5, CSS3, SASS, Bootstrap, JavaScript, en trabajo colaborativo usando Git y GitHub.</p>
                 </div>
                 <!-- Profesor de matemáticas -->
                 <div class="mb-3">
@@ -141,16 +151,10 @@
                     <p class="resumen lead">Profesor a cargo de distintos cursos, durante más de 7
                         años, dando clases de matemática a adolescentes y adultos.</p>
                 </div>
-                <!-- Desarrollador web Freelance -->
-                <div class="mb-3">
-                    <h3 class="subtitulo mb-1">Desarrollador web Freelance<h3>
-                    <p class="subtitulo fs-4 lead mt-0 mb-2">2021-2022</p>
-                    <p class="resumen lead">Desarrollo de sitios web. Desarrollo frontend con HTML5, CSS3, SASS, Bootstrap, JavaScript, en trabajo colaborativo usando Git y GitHub.</p>
-                </div>
             </div>
         </section>
         <!-- Fin de la sección acerca de mí -->
-
+        
         <!-- Sección de skills (habilidades técnicas y blandas)-->
         <section>
             <h2 id="skills" class="titulo fs-1">Skills</h2>
@@ -158,23 +162,6 @@
                 <h3 class="subtitulo">Technical skills</h3>
                 <h3 class="subtitulo fs-4 lead">Tools:</h3>
                 <div class="cajaSkills mb-3">
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/vscode.svg" class="iconoSkill" alt="logo de Visual Studio Code">
-                        <p class="nombreIcono lead">Visual Studio Code</p>
-                    </div>    
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/jupyter.svg" class="iconoSkill" alt="logo de Jupyter">
-                        <p class="nombreIcono lead">Jupyter</p>
-                    </div>    
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/anaconda.svg" class="iconoSkill" alt="logo de Anaconda">
-                        <p class="nombreIcono lead">Anaconda</p>
-                    </div>    
-                    <div class="m-2">
-                        <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
-                        <img src="img/skills/technical-skills/markdown.svg" class="iconoSkill" alt="logo de Markdown">
-                        <p class="nombreIcono lead">Markdown</p>
-                    </div>    
                     <div class="m-2">
                         <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
                         <img src="img/skills/technical-skills/git.svg" class="iconoSkill" alt="logo de Git">
@@ -185,6 +172,10 @@
                         <p class="nombreIcono lead">GitHub</p>
                     </div>  
                     <div class="m-2">
+                        <img src="img/skills/technical-skills/markdown.svg" class="iconoSkill" alt="logo de Markdown">
+                        <p class="nombreIcono lead">Markdown</p>
+                    </div>    
+                    <div class="m-2">
                         <img src="img/skills/technical-skills/docker-original.svg" class="iconoSkill" alt="logo de Docker">
                         <p class="nombreIcono lead">Docker</p>
                     </div>    
@@ -192,6 +183,22 @@
                         <img src="img/skills/technical-skills/linux-original.svg" class="iconoSkill" alt="logo de Linux">
                         <p class="nombreIcono lead">Linux</p>
                     </div>  
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/vscode.svg" class="iconoSkill" alt="logo de Visual Studio Code">
+                        <p class="nombreIcono lead">Visual Studio Code</p>
+                    </div>    
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/google-colab-96.svg" class="iconoSkill" alt="logo de Google Colaboratory">
+                        <p class="nombreIcono lead">Colab</p>
+                    </div>  
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/jupyter.svg" class="iconoSkill" alt="logo de Jupyter">
+                        <p class="nombreIcono lead">Jupyter</p>
+                    </div>    
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/anaconda.svg" class="iconoSkill" alt="logo de Anaconda">
+                        <p class="nombreIcono lead">Anaconda</p>
+                    </div>    
                 </div>
                 <h3 class="subtitulo fs-4 lead">Data Engineering:</h3>
                 <div class="cajaSkills mb-3">
@@ -201,19 +208,31 @@
                     </div>
                     <div class="m-2">
                         <img src="img/skills/technical-skills/apache_spark-ar21.svg" class="iconoSkill" alt="logo de Spark">
-                        <p class="nombreIcono lead">Spark</p>
+                        <p class="nombreIcono lead">Apache Spark</p>
                     </div>
-                    <div class="m-2">
+                    <!-- <div class="m-2">
                         <img src="img/skills/technical-skills/apache_spark-icon.svg" class="iconoSkill" alt="logo de Spark">
                         <p class="nombreIcono lead">PySpark</p>
                     </div>
                     <div class="m-2">
                         <img src="img/skills/technical-skills/apache_spark-icon.svg" class="iconoSkill" alt="logo de Spark">
                         <p class="nombreIcono lead">Spark SQL</p>
-                    </div>
+                    </div> -->
                     <div class="m-2">
                         <img src="img/skills/technical-skills/Apache Airflow.svg" class="iconoSkill" alt="logo de Apache Airflow">
                         <p class="nombreIcono lead">Apache Airflow</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/Apache-nifi.svg" class="iconoSkill" alt="logo de Apache NiFi">
+                        <p class="nombreIcono lead">Apache NiFi</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/hive.svg" class="iconoSkill" alt="logo de Apache Hive">
+                        <p class="nombreIcono lead">Apache Hive</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/hiveIceberg.png" class="iconoSkill" alt="logo de Apache Iceberg con Hive">
+                        <p class="nombreIcono lead">Apache Iceberg</p>
                     </div>
                 </div>
                 <h3 class="subtitulo fs-4 lead">Data Science & Machine Learning:</h3>
@@ -234,10 +253,10 @@
                         <img src="img/skills/technical-skills/scikit-learn.svg" class="iconoSkill" alt="logo de Scikit-Learn">
                         <p class="nombreIcono lead">Scikit-Learn</p>
                     </div>        
-                    <div class="m-2">
+                    <!-- <div class="m-2">
                         <img src="img/skills/technical-skills/power-bi.svg" class="iconoSkill" alt="logo de Power BI">
                         <p class="nombreIcono lead">Power BI</p>
-                    </div>
+                    </div> -->
                 </div>
                 <h3 class="subtitulo fs-4 lead">Databases:</h3>
                 <div class="cajaSkills mb-3">
@@ -276,7 +295,7 @@
                         <img src="img/skills/technical-skills/flask-original.svg" class="iconoSkill" alt="logo de Flask">
                         <p class="nombreIcono lead">Flask</p>
                     </div>
-                    <div class="m-2">
+                    <!-- <div class="m-2">
                         <img src="img/skills/technical-skills/nodejs.svg" class="iconoSkill" alt="logo de Node.js">
                         <p class="nombreIcono lead">Node.js</p>
                     </div>
@@ -287,7 +306,7 @@
                     <div class="m-2">
                         <img src="img/skills/technical-skills/express.svg" class="iconoSkill" alt="logo de Express">
                         <p class="nombreIcono lead">Express</p>
-                    </div>        
+                    </div>         -->
                 </div>
                 <h3 class="subtitulo fs-4 lead">Front-end:</h3>
                 <div class="cajaSkills mb-3">
@@ -307,14 +326,14 @@
                         <img src="img/skills/technical-skills/javascript.svg" class="iconoSkill" alt="logo de JavaScript">
                         <p class="nombreIcono lead">JavaScript</p>
                     </div>    
-                    <div class="m-2">
+                    <!-- <div class="m-2">
                         <img src="img/skills/technical-skills/typescript.svg" class="iconoSkill" alt="logo de TypeScript">
                         <p class="nombreIcono lead">TypeScript</p>
                     </div>    
                     <div class="m-2">
                         <img src="img/skills/technical-skills/react.svg" class="iconoSkill" alt="logo de React">
                         <p class="nombreIcono lead">React</p>
-                    </div>
+                    </div> -->
                 </div>    
                 <h3 class="subtitulo">Soft skills</h3>
                 <div class="cajaSkills">
@@ -511,21 +530,15 @@
                     <div class="info presentacionInfo">
                         <p class="fs-3 m-0 mb-2">Certificaciones</p>
                  </div>
-                <div class="info presentacionInfo">
-                    <a href="https://credentials.databricks.com/1473c52e-c2e5-41ad-94d4-6fa71404e751#gs.azeh18" target="_blank" class="text-decoration-none">
-                        <p class="fs-4 m-0">- <span><i class="fa-solid fa-certificate me-1"></i></span>Databricks Lakehouse Fundamentals</p>
-                    </a>
-                    <p class="fs-4 lead">2022 Diciembre</p>
-                </div>
-                <div class="info presentacionInfo">
-                    <a href="#" target="_blank" class="text-decoration-none">
-                        <p class="fs-4 m-0">- <span><i class="fa-solid fa-certificate me-1"></i></span>Azure Fundamentals</p>
-                    </a>
-                    <p class="fs-4 lead">En preparación</p>
-                </div>
+                 <div class="info presentacionInfo">
+                     <a href="https://learn.microsoft.com/es-mx/users/nahueldevone-0644/credentials/50ec59e020281976?ref=https%3A%2F%2Fwww.linkedin.com%2F" target="_blank" class="text-decoration-none">
+                         <p class="fs-4 m-0">- <span><i class="fa-solid fa-certificate me-1"></i></span>Azure Data Fundamentals</p>
+                     </a>
+                     <p class="fs-4 lead">2025 Febrero</p>
+                 </div>
                 <div class="info presentacionInfo">
                     <a href="#" target="_blank" class="text-decoration-none">
-                        <p class="fs-4 m-0">- <span><i class="fa-solid fa-certificate me-1"></i></span>Azure Data Fundamentals</p>
+                        <p class="fs-4 m-0">- <span><i class="fa-solid fa-certificate me-1"></i></span>Azure AI Fundamentals</p>
                     </a>
                     <p class="fs-4 lead">En preparación</p>
                 </div>
@@ -783,16 +796,16 @@
                 <div class="footerContacto col-10 col-md-5 col-xl-4 col-xxl-3 mb-2">
                     <div class="d-flex flex-column justify-content-start align-items-start">
                         <h4 class="mb-3">Skills profesionales:</h4>
-                        <p>- Desarrollo web</p>
-                        <p>- Ingeniería de Datos</p>
-                        <p>- Machine Learning</p>
+                        <p>- Ingeniería & Ciencia de Datos</p>
+                        <p>- Machine learning & Gen AI</p>
+                        <p>- Desarrollo con Python</p>
                     </div>
                 </div>
                 <div class="footerContacto col-10 col-md-5 col-xl-4 col-xxl-3 mb-2">
                     <div class="d-flex flex-column justify-content-start align-items-start">
                         <h4 class="mb-3">Contactame:</h4>
                         <div class="mb-2">
-                            <span><i class="fa-solid fa-envelope me-1"></i></span>nahuel.lopez.dev@gmail.com
+                            <span><i class="fa-solid fa-envelope me-1"></i></span>nahuel.developer1@gmail.com
                         </div>
                         <div class="border border-secondary rounded p-2 mb-2">
                             <a href="mailTo:nahuel.lopez.dev@gmail.com" id="escribeme" class="text-decoration-none footerContacto"><span><i class="fa-solid fa-message me-2"></i></span>Escríbeme</a>
@@ -819,7 +832,7 @@
         </div>
         <div class="container-fluid m-0 pb-1 pt-2">
             <a href="#" class="logoFooter">⚡Portfolio⚡</a>
-            <p class="footerInfo pb-4 m-0">&copy;2023 Desarrollado con 💙 por <i><b>NaLo Dev ထ</b></i><p/>
+            <p class="footerInfo pb-4 m-0">&copy;2023 Desarrollado con 💙 por <i><b>Nahuel Lopez ထ</b></i><p/>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
