herramienta de anaconda comentada en el index

--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
                         <img src="img/skills/technical-skills/jupyter.svg" class="iconoSkill" alt="logo de Jupyter">
                         <p class="nombreIcono lead">Jupyter</p>
                     </div>    
-                    <div class="m-2">
+                    <!-- <div class="m-2">
                         <img src="img/skills/technical-skills/anaconda.svg" class="iconoSkill" alt="logo de Anaconda">
                         <p class="nombreIcono lead">Anaconda</p>
-                    </div>    
+                    </div>     -->
                 </div>
                 <h3 class="subtitulo fs-4 lead">Data Engineering:</h3>
                 <div class="cajaSkills mb-3">
