enlace a linkedin y status de egresado actualizados

--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
                 <div class="presentacion mb-4">
                     <!-- Texto de presentación e iconos de redes sociales-->
                     <div class="presentacionInfo stretchRight">
-                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Data Engineer & Python Developer</h1>
+                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Data Engineer</h1>
                         <p class="presentacionInfoPrincipal lead">
-                            Soy de Buenos Aires (Argentina) y actualmente me desempeño como Data Engineer en NTT Data, aunque en mi trabajo diario también hago ciencia de datos y machine learning. 
+                            Actualmente trabajo como Ingeniero de Datos en NTT Data. 
                             <br>
-                            Amo el mundo de los datos, pero también el desarrollo. Por eso, estoy estudiando Ingeniería en Sistemas y cuento con formación de Full Stack Developer con JavaScript y Python.
+                            Soy Ingeniero en Sistemas Computacionales especializado en ingeniería de datos, puedo desenvolverme en trabajos de GenAI y tengo experiencia en machine learning.
                             <br>
-                            En mis tiempos libres me gusta aprender otras tecnologías, como así también profundizar y practicar las que ya conozco, para consolidar mi stack como Data Engineer.     
+                            En mis tiempos libres, dedico una parte importante de mi tiempo a aprender nuevas tecnologías y a profundizar y practicar aquellas que ya conozco, con el objetivo de seguir fortaleciendo mi perfil como Data Engineer. 
                         </p>
                         <div class="cajaIconosPresentacion">
-                            <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-3 text-decoration-none">
+                            <a href="https://www.linkedin.com/in/nahuel-lopez-data-engineer/" target="_blank" class="m-3 text-decoration-none">
                                 <img src="./img/social/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion">
                                 <p class="nombreIcono lead">LinkedIn</p>
                             </a>
@@ -108,7 +108,7 @@
                     <div class="foto text-center mb-2">
                         <img src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="imagen de mi foto de perfil">
                         <p class="nombre">Nahuel Lopez</p>
-                        <p class="nombre">Data Engineer & Python Dev</p>
+                        <p class="nombre">Data Engineer</p>
                     </div>
                 </div>
             </div>
@@ -422,18 +422,7 @@
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Ingeniería en sistemas</p>
-                            <p class="fs-4 mt-3 lead">2023 - 2026 (En curso)</p>
-                        </div>
-                    </article>
-                    <!-- Bootcamp de MLOps de Código Facilito -->
-                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="#" target="_blank">
-                            <img src="img/education/img-mlops.png"
-                                alt="imagen del logo del bootcamp de MLOps de Código Facilito" class="img">
-                        </a>
-                        <div class="info">
-                            <p class="fs-4 m-0">Bootcamp de MLOps</p>
-                            <p class="fs-4 mt-3 lead">2024 Jun-Sep (En curso)</p>
+                            <p class="fs-4 mt-3 lead">2023 - 2025</p>
                         </div>
                     </article>
                     <!-- Bootcamp de Ingeniería de Datos de Código Facilito -->
@@ -478,17 +467,6 @@
                         <div class="info">
                             <p class="fs-4 m-0">Ciencia de Datos e IA</p>
                             <p class="fs-4 mt-3 lead">2023 Feb-Oct</p>
-                        </div>
-                    </article>
-                    <!-- Programa Codo a Codo Full Stack Node.js -->
-                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="https://drive.google.com/file/d/19wnB1HV5MDmPgzY3lrN34BRTGfRnBOco/view?usp=sharing" target="_blank">
-                            <img src="img/education/codoacodo.png"
-                                alt="imagen del logo de Codo a Codo, programa de formación de TI" class="img">
-                        </a>
-                        <div class="info">
-                            <p class="fs-4 m-0">Full Stack - Node.js</p>
-                            <p class="fs-4 mt-3 lead">2022 Ago-Dic</p>
                         </div>
                     </article>
                     <!-- Programa ONE -->
@@ -536,12 +514,12 @@
                      </a>
                      <p class="fs-4 lead">2025 Febrero</p>
                  </div>
-                <div class="info presentacionInfo">
+                <!-- <div class="info presentacionInfo">
                     <a href="#" target="_blank" class="text-decoration-none">
                         <p class="fs-4 m-0">- <span><i class="fa-solid fa-certificate me-1"></i></span>Azure AI Fundamentals</p>
                     </a>
                     <p class="fs-4 lead">En preparación</p>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- Fin de la sección de formación -->
@@ -821,7 +799,7 @@
                         <div>
                             <a href="https://github.com/Nahuel-lopez-dev/" target="_blank" class="m-2"><img src="img/social/github.svg"
                                 alt="Imagen del icono de GitHub" class="iconoPresentacion bg-dark border"></a>
-                            <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2"><img
+                            <a href="https://www.linkedin.com/in/nahuel-lopez-data-engineer/" target="_blank" class="m-2"><img
                                 src="img/social/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion border"></a>
                             <a href="https://linktr.ee/nahuel.lopez" target="_blank" class="m-2"><img
                                 src="img/social/linktree.svg" alt="Imagen del icono de linktree" class="iconoPresentacion border"></a>
